--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pandas
 google-cloud-bigquery
 google-cloud-bigquery-storage
 google-cloud-core
+google-cloud-storage
+gcsfs
 numpy
 db-dtypes
 colorama
